--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
-<link rel="stylesheet" href="css/tampilan.css" type="text/css" />
+<link rel="stylesheet" href="tampilan.css" type="text/css" />
+<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="easySlider1.7.js"></script>
+<script type="text/javascript">
+	$(document).ready(function(){	
+		$("#slider").easySlider({
+			auto: true, 
+			continuous: true
+		});
+	});	
+</script>
 </head>
-
 <body>
 	<div class="header">
     	<div class="section">
-			<a href="index.html"><img class="gbr" src="images/logo.jpg" alt="Image"></a>
+			<a href="index.html"><img class="gbr" src="images/newbielogo copy.jpg" width="160px" height="80px" alt="Image" /></a>
 			<ul>
 				<li class="current">
 					<a href="index.html">Home</a>
@@ -20,75 +29,91 @@
 				<li>
 					<a href="profil.html">Profil</a>
 				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
 			</ul>
 		</div>
 	</div>
     <div class="utama">
+    	<div id="slider">
+			<ul>				
+				<li><img src="images/5379918_20130420105612.jpg" width="100%" height="600px"/></li>
+				<li><img src="images/friskaviljorhannapribitzer-9182.jpg" width="100%" height="600px"/></li>
+				<li><img src="images/Suede,_royal_albert_hall_2010.jpg" width="100%" height="600px"/></li>
+				<li><img src="images/band.jpg" width="100%" height="600px" /></li>
+				<li><img src="images/Suede,_royal_albert_hall_2010.jpg" width="100%" height="600px"/></li>
+			</ul>
+        </div>
+        <!--<div class="signup">
+        	<form name="form" >
+               	<input type="text" name="username" value="Username" onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br />
+               	<input type="password" name="pass" value="Password"  onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br />
+               	<input type="password" name="repass" value="Re-Password"  onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br />
+               	<h2>Mendaftar</h2>
+        	</form>
+        </div>-->
     </div>
     <div class="login">
-    	<div class="formulir">
-        	<form name="form" class="signup">
-                <input type="text" name="username" value="Username" onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br />
-                <input type="password" name="pass" value="Password"  onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br />
-                <input type="password" name="repass" value="Re-Password"  onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br />
-                <h2 class="daftar">Mendaftar</h2>
-        	</form>
-            <form name="form" class="signin">
-                <input type="text" name="username" value="Username"  onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br />
-                <input type="password" name="pass" value="Password"  onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br /><br /><br /><br /><br />
-                <h2 class="daftar">Masuk</h2>
-        	</form>
+    	<div class="pagar">
+    		<div class="signin">
+    			<div class="judulin"><h2>Sign In</h2></div>
+                <form name="form" class="formdaftar">
+               		<input type="text" name="username" value="Username" onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br />
+               		<input type="password" name="pass" value="Password"  onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br />
+               		<h2>Masuk</h2>
+        		</form>
+	        </div>
+        </div>
+        <div class="pagarkanan">
+    		<div class="signup">
+    			<div class="judulin"><h2>Sign Up</h2></div>
+                <form name="form" class="formdaftar">
+               		<input type="text" name="username" value="Username" onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br />
+               		<input type="password" name="pass" value="Password"  onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br />
+               		<input type="password" name="repass" value="Re-Password"  onBlur="javascript:if(this.value==''){this.value=this.defaultValue;}" onFocus="javascript:if(this.value==this.defaultValue){this.value='';}"/><br />
+               		<h2>Mendaftar</h2>
+        		</form>
+	        </div>
         </div>
     </div>
-    <!--<div class="menuevent">
-    
-    </div>-->
-    <div class="bawah">
-		<div class="event">
-        	<ul class="gameevent">
-				<li>
-					<img src="images/indiefest.jpg" alt="Img" height="204" width="220">
-					<h3><a href="event.html">LA Light Indiefest</a></h3>
-                    <p>
-						Acara : 23 September 2013
-					</p>
-				</li>
-				<li>
-					<img src="images/photo.jpg" alt="Img" height="204" width="220">
-					<h3><a href="event.html">MILD Music Fest</a></h3>
-                    <p>
-						Acara : 23 September 2013
-					</p>
-				</li>
-				<li>
-					<img src="images/ASIA-MUSIC-FESTIVAL-BANNER-2013.jpg" alt="Img" height="204" width="220">
-					<h3><a href="event.html">Asia MusicFest</a></h3>
-                    <p>
-						Acara : 23 September 2013
-					</p>
-				</li>
-				<li>
-					<img src="images/support_independent_music.gif" alt="Img" height="204" width="220">
-					<h3><a href="event.html">Support Local Medan</a></h3>
-                    <p>
-						Acara : 23 September 2013
-					</p>
+    <div class="tampil">
+    	<div class="garistengah">
+    		<div class="tamevent">
+    			<div class="titel"><h2>Event</h2></div>
+	        </div>
+        </div>
+        <div class="bagkanan">
+    		<div class="daftband">
+    			<div class="titel"><h2>Indie</h2></div>
+	        </div>
+        </div>
+    </div>
+    <div class="footer">
+    	<div class="secti">
+			<ul>
+            	<li>
+					<a href="contact.html">Contact</a>
 				</li>
                 <li>
-					<img src="images/tambahevent.jpg" alt="Img" height="204" width="220">
-					<h3><a href="#">Tambah Event</a></h3>
-                    <p>
-						<br />
-					</p>
+					<a href="about.html">About</a>
+				</li>
+				<li>
+					<a href="arf.html">Irfan Arfiandi</a>
+				</li>
+				<li>
+					<a href="dit.html">Adithya Maulana</a>
+				</li>
+				<li>
+					<a href="krai.html">Tonggor Sihite</a>
+				</li>
+                <li>
+					<a href="chr.html">Dedy Christian</a>
 				</li>
 			</ul>
 		</div>
+    </div>
+    <div class="bawah">
         <p class="copy">
-			© Copyright © 2013.Company name all rights reserved
+			© Copyright © 2013.Newbie all rights reserved
 		</p>
-    </div>        
+    </div>
 </body>
 </html>
