--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
-<link rel="stylesheet" href="css/tampilan.css" type="text/css" />
+<link rel="stylesheet" href="tampilan.css" type="text/css" />
 </head>
 <body>
 	<div class="header">
     	<div class="section">
-			<a href="index.html"><img class="gbr" src="images/logo.jpg" alt="Image"></a>
+			<a href="index.html"><img class="gbr" src="images/newbielogo copy.jpg" width="160px" height="80px" alt="Image" /></a>
 			<ul>
 				<li>
 					<a href="index.html">Home</a>
@@ -19,12 +19,12 @@
 				<li>
 					<a href="profil.html">Profil</a>
 				</li>
-				<li class="current">
-					<a href="contact.html">Contact</a>
-				</li>
 			</ul>
 		</div>
 	</div>
+    <div class="garis">
+    	<h1>CONTACT</h1>
+    </div>
     <div class="contents">
 		<div class="contact">
 			<form>
@@ -44,10 +44,34 @@
 			</form>
 		</div>
 	</div>
+    <div class="footer">
+    	<div class="secti">
+			<ul>
+            	<li class="pilih">
+					<a href="contact.html">Contact</a>
+				</li>
+                <li>
+					<a href="about.html">About</a>
+				</li>
+				<li>
+					<a href="arf.html">Irfan Arfiandi</a>
+				</li>
+				<li>
+					<a href="dit.html">Adithya Maulana</a>
+				</li>
+				<li>
+					<a href="krai.html">Tonggor Sihite</a>
+				</li>
+                <li>
+					<a href="chr.html">Dedy Christian</a>
+				</li>
+			</ul>
+		</div>
+    </div>
     <div class="bawah">
         <p class="copy">
-			© Copyright © 2013.Company name all rights reserved
+			© Copyright © 2013.Newbie all rights reserved
 		</p>
-    </div> 
+    </div>
 </body>
 </html>
